html product list

--- a/src/pages/produits-liste/produits-liste.scss
+++ b/src/pages/produits-liste/produits-liste.scss
@@ -1,3 +1,18 @@
 page-produits-liste {
 
+  button.ajouter {
+    background-color: #662483;
+    color: white;
+  }
+
+  button.ajouter:hover {
+    background-color: indigo;
+    color: white;
+  }
+
+  button.customiser {
+    background-color: white;
+    color: #662483;
+    border: 1px solid #662483;
+  }
 }
