html login and register

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,11 @@
 page-login {
 
+  button.login {
+    background-color: #662483;
+    color: white;
+  }
+
+  p.client {
+    color: #662483;
+  }
 }
