--- a/src/pages/profil/profil.scss
+++ b/src/pages/profil/profil.scss
@@ -1,3 +1,23 @@
 page-profil {
 
+  img#profile-image {
+      border-radius: 100px;
+      border: 1px solid #fff;
+      width: 128px;
+      height: 128px;
+      margin: 30px auto 0;
+      box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
+      margin-top: 0;
+  }
+
+  ion-row.avatar {
+    display: flex;
+    justify-content: center;
+  }
+
+  button.commande {
+    border: 1px solid #662483;
+    margin-bottom: 10px;
+    color: #662483;
+  }
 }
