--- a/src/pages/produits-liste/produits-liste.scss
+++ b/src/pages/produits-liste/produits-liste.scss
@@ -20,4 +20,11 @@ page-produits-liste {
     background-color: #662483 ;
     color: white;
   }
+
+  button.details {
+    background-color: white;
+    color: #662483;
+    border: none;
+
+  }
 }
