--- a/src/pages/panier/panier.scss
+++ b/src/pages/panier/panier.scss
@@ -1,3 +1,18 @@
 page-panier {
 
+  ion-thumbnail {
+    min-width: 5rem;
+    min-height: 5rem;
+    img {
+      max-width: 5rem;
+      min-width: 5rem;
+    }
+  }
+
+  .order {
+    width: 100%;
+    background-color: #662483;
+  }
+
+
 }
