--- a/src/pages/profil/profil.scss
+++ b/src/pages/profil/profil.scss
@@ -5,7 +5,7 @@ page-profil {
       border: 1px solid #fff;
       box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
       margin-left: 10px;
-      width: 90%;
+      width: 100%;
 
   }
 
@@ -15,13 +15,25 @@ page-profil {
     margin-bottom: 30px;
   }
 
-  button.commande {
+  #modifyEmail {
+    border: 1px solid #662483;
+    background-color: #fff;
+    padding: 10px;
+    margin-bottom: 10px;
+    color: #662483;
+
+  }
+
+  #deleteUser {
     border: 1px solid #662483;
     margin-bottom: 10px;
     color: #662483;
+    text-align: center;
   }
 
   ion-label {
     margin: 0;
   }
+
+
 }
