--- a/src/pages/commande-retrait/commande-retrait.scss
+++ b/src/pages/commande-retrait/commande-retrait.scss
@@ -6,8 +6,13 @@ page-commande-retrait {
     padding: auto;
     margin: auto;
   }
+  p {
+text-align: center;
+  }
   .progressbar {
     counter-reset: step;
+  height: 50px;
+  padding-left: 0px;
   }
   .progressbar li {
     list-style-type: none;
@@ -18,6 +23,7 @@ page-commande-retrait {
     text-align: center;
     text-transform: uppercase;
     color: #7d7d7d;
+    margin-bottom: 20px;
   }
   .progressbar li:before {
     width: 30px;
