order process done

--- a/src/pages/commande-confirmation/commande-confirmation.scss
+++ b/src/pages/commande-confirmation/commande-confirmation.scss
@@ -1,3 +1,15 @@
 page-commande-confirmation {
+    .sucessOrder
+    {
+        font-size: 22px;
+        color: grey;
+        padding: 30px;
+        text-align: left;
+    }
+
+    #success
+    {
+        width: 40%;
+    }
 
 }
